--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<script src="./dist/main.js"></script>
-	<!-- <script src="https://cdn.jsdelivr.net/gh/mauricio-testa/builderall-error-pages@master/dist/main.js"></script> -->
+	<!--	<script src="https://cdn.jsdelivr.net/gh/mauricio-testa/builderall-error-pages@master/dist/main.js"></script> -->
+	<link href="https://cdn.jsdelivr.net/gh/mauricio-testa/builderall-error-pages@master/assets/fonts/muli/muli.css" rel="stylesheet">
 
 </head>
 <body>
