--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 	<builderall-error-404
-		pre="Ops"
-		headline="Algo deu ruim"
-		text="Não foi possível encontrar a página que você está procurando"
-		button-text="Bora bill"
+		pre="PRE"
+		headline="HEADLINE"
+		text="TEXT"
+		button-text="BUTTON"
 		button-href="https://google.com"
 	/>
 </body>
