--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<script src="./dist/main.js"></script>
-	<!--	<script src="https://cdn.jsdelivr.net/gh/mauricio-testa/builderall-error-pages@master/dist/main.js"></script> -->
-	<link href="https://cdn.jsdelivr.net/gh/mauricio-testa/builderall-error-pages@master/assets/fonts/muli/muli.css" rel="stylesheet">
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <script src="./dist/main.js"></script>
+  <link href="./assets/fonts/muli/muli.css" rel="stylesheet">
 </head>
+
 <body>
-	<builderall-error-404
-		pre="PRE"
-		headline="HEADLINE"
-		text="TEXT"
-		button-text="BUTTON"
-		button-href="https://google.com"
-	/>
+  <builderall-error-404
+    pre="PRE"
+    headline="HEADLINE"
+    text="TEXT"
+    button-text="BUTTON"
+    button-href="https://google.com"
+  />
 </body>
+
 </html>
